k8s/backend-deployment-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: chat-backend
        image: itsanindyak/chat-backend:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: 300m
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5001
