k8s/frontend-deployment-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: chat-frontend
        image: itsanindyak/chat-frontend
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
