k8s/mongodb-statefullset-k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  namespace: chat
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongo-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0.25-rc0-jammy
        ports:
        - containerPort: 27017
          name: mongo-port
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
      namespace: chat
    spec:
      storageClassName: standard 
      
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
