k8s/backend-svc-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: chat
spec:
  selector:
    app: backend
  ports:
  - port: 5001
    targetPort: 5001
