k8s/frontend-svc-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: chat
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
