k8s/mongodb-svc-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: chat
spec:
  clusterIP: None
  selector:
    app: mongodb  
  ports:
  - port: 27017
    targetPort: 27017
